<resources>
    <string name="app_name">PROG20082_Project_AV_JH</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="save">Save</string>

    <string name="oName">Owner Name</string>

    <string name="dName">Dog Name</string>
    <string name="gender">Gender</string>
    <string name="neutered">Neutered</string>
    <string name="breed">Breed</string>
    <string name="age">Age</string>

    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
        <item>Unknown</item>
    </string-array>

    <string name="info1">Welcome to Woof! Where your dog can finally meet their new best friend, and possible forever playdate!</string>

    <string name="title_activity_landing">WoofWoofWoof!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_display_map">Map</string>


</resources>